@@ -19,7 +19,7 @@
 #define _TCLINT
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include "tclConfig.h"
 #endif
 
 /*
