@@ -7,7 +7,7 @@ dnl	to configure the system for the local environment.
 
 AC_INIT(../generic/tcl.h)
 AC_PREREQ(2.57)
-AC_CONFIG_HEADERS(config.h)
+AC_CONFIG_HEADERS(tclConfig.h)
 
 TCL_VERSION=8.5
 TCL_MAJOR_VERSION=8
